# megarover_nnql

RRTstar-planner-for-ROS-navigation/: README.md
RRTstar-planner-for-ROS-navigation/rrtstar_planner/: CMakeLists.txt  package.xml
RRTstar-planner-for-ROS-navigation/rrtstar_planner/src/: old_rrtstarplan.cpp  rrtstarplan.cpp
m-explore/: README.md
map2gazebo/launch/: map2gazebo.launch
map_tools/: CMakeLists.txt  package.xml
map_tools/map/: dst.pgm  dst.yaml
map_tools/src/: view_pgm.cpp
megarover3_ros/: readme.md
megarover3_ros/configuration_files/: amcl.yaml  megarover_costmap_common_params.yaml  megarover_dwa_local_planner_params.yaml  megarover_dwa_local_planner_params_error.yaml  megarover_global_costmap_params.yaml  megarover_local_costmap_params.yaml  megarover_move_base_params.yaml  move_base (copy).yaml  move_base.yaml
megarover3_ros/launch/: gmapping.launch  gmapping_origin.launch  map_load.launch  megarover_move_base_dwa.launch  megarover_move_base_dwa_origin.launch  record.launch
megarover3_ros/map/: 180.pgm  180.yaml  2.pgm  2.yaml  90.pgm  90.yaml  map.pgm  map_old.pgm  zentai.pgm  zentai.yaml
megarover3_ros/src/: pub_odom.cpp
megarover3_ros/urdf/: megarover.urdf  megarover_.urdf
megarover_description/: README.md
megarover_samples/launch/: move_base.launch  (+1 more)
model/: CMakeLists.txt  README.md  package.xml
navigation/: README.md
nnql/: CMakeLists.txt  package.xml
practice_description/: CMakeLists.txt  package.xml
wall_follower/: README.md
world/: 2340.pgm  2340.yaml  CMakeLists.txt  README.md  gmapping.rviz  package.xml
(+264 files in other folders)
